--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lodash": "^4.17.21",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
