--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-    
-
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -18,6 +16,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^8.3.2",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
