--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "flowbite": "^1.5.2",
     "flowbite-react": "^0.1.10",
     "lodash": "^4.17.21",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "swiper": "^8.3.2",
     "tailwindcss": "^3.1.8"
   },
