--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-paginate": "^8.1.3",
     "swiper": "^8.3.2",
     "tailwindcss": "^3.1.8"
