--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-icons": "^4.4.0",
     "react-outside-click-handler": "^1.3.0",
     "react-paginate": "^8.1.3",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^6.4.1",
     "swiper": "^8.3.2",
     "tailwindcss": "^3.1.8"
   },
