--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-paginate": "^8.1.3",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.1",
+    "styled-components": "^5.3.6",
     "swiper": "^8.3.2",
     "tailwindcss": "^3.1.8"
   },
